--- a/U2-Lab2/monolitico/docker-compose.yml
+++ b/U2-Lab2/monolitico/docker-compose.yml
@@ -33,9 +33,11 @@ services:
     working_dir: /home/backend
     volumes:
       - ./backend:/home/backend
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
-      - NODE_ENV=PRODUCTION
-      - URL_DB_CONNECTION=mongodb://localhost/bookstore-production
+      - NODE_ENV=production
+      - URL_DB_CONNECTION=mongodb://host.docker.internal/bookstore-production
     ports:
       - "5000:5000"
     command: "npm start"
