--- a/U2-Lab2/monolitico/docker-compose.yml
+++ b/U2-Lab2/monolitico/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '3.1'
 services:
-#  nginx: #dsadas
-#    container_name: nginx
-#    image: nginx
-#    volumes:
-#    - ./nginx.conf:/etc/nginx/nginx.conf:ro
-#    - ./ssl:/etc/nginx/ssl
-#    - ./ssl.conf:/etc/nginx/ssl.conf
-#    ports:
-#    - 80:80
-#    - 443:443
-#    depends_on:
-#    - frontend
+  nginx:
+    container_name: nginx
+    image: nginx
+    volumes:
+    - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./ssl:/etc/nginx/ssl
+    - ./ssl.conf:/etc/nginx/ssl.conf
+    ports:
+    - 3000:3000
+    - 443:443
+    depends_on:
+    - frontend
+    restart: always
   frontend:
     container_name: frontend
     image: node
@@ -22,8 +23,7 @@ services:
       - ./frontend:/home/frontend
     environment:
       - NODE_ENV=production
-    ports:
-      - "3000:3000"
+    restart: always
     command: "npm start"
   backend:
     container_name: backend
@@ -40,4 +40,5 @@ services:
       - URL_DB_CONNECTION=mongodb://host.docker.internal/bookstore-production
     ports:
       - "5000:5000"
+    restart: always
     command: "npm start"
