--- a/U2-Lab2/monolitico/nginx.conf
+++ b/U2-Lab2/monolitico/nginx.conf
@@ -30,7 +30,9 @@ server {
   client_max_body_size 0;
 
   location / {
-    proxy_pass http://127.0.0.1:3000;
+    proxy_read_timeout 300s;
+    proxy_connect_timeout 75s;
+    proxy_pass http://172.17.0.1:3000;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
