--- a/U2-Lab2/monolitico/docker-compose.yml
+++ b/U2-Lab2/monolitico/docker-compose.yml
@@ -8,8 +8,10 @@ services:
     - ./ssl:/etc/nginx/ssl
     - ./ssl.conf:/etc/nginx/ssl.conf
     ports:
-    - 3000:3000
+    - 80:80
     - 443:443
+    extra_hosts:
+    - "host.docker.internal:host-gateway"
     depends_on:
     - frontend
     restart: always
@@ -23,6 +25,8 @@ services:
       - ./frontend:/home/frontend
     environment:
       - NODE_ENV=production
+    ports:
+    - "3000:3000"
     restart: always
     command: "npm start"
   backend:
