--- a/U2-Lab2/monolitico/nginx.conf
+++ b/U2-Lab2/monolitico/nginx.conf
@@ -7,6 +7,10 @@ events {
 }
 http {
 
+upstream app1 {
+  server host.docker.internal:3000;
+}
+
 server {
   listen 80;
   listen [::]:80;
@@ -14,6 +18,7 @@ server {
   server_name _;
   rewrite ^ https://$host$request_uri permanent;
 }
+
 
 server {
   listen 443 ssl http2 default_server;
@@ -32,7 +37,7 @@ server {
   location / {
     proxy_read_timeout 300s;
     proxy_connect_timeout 75s;
-    proxy_pass http://172.17.0.1:3000;
+    proxy_pass http://app1;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
