--- a/U2-Lab2/monolitico/frontend/package.json
+++ b/U2-Lab2/monolitico/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://svaneg11-lab2-monolitico.tk:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
