add setup for backend1 and backend2

--- a/U2-Lab2/distribuido/nginx-back/nginx.conf
+++ b/U2-Lab2/distribuido/nginx-back/nginx.conf
@@ -12,18 +12,10 @@ upstream app1 {
   server 10.128.0.12:5000;
 }
 
-server {
-  listen 80;
-  listen [::]:80;
-
-  server_name _;
-  rewrite ^ https://$host$request_uri permanent;
-}
-
 
 server {
-  listen 443 ssl http2 default_server;
-  listen [::]:443 ssl http2 default_server;
+  listen 80 default_server;
+  listen [::]:80 default_server;
 
   server_name _;
 
