--- a/U2-Lab2/distribuido/back/backend-2/docker-compose.yml
+++ b/U2-Lab2/distribuido/back/backend-2/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     user: node
     working_dir: /home/backend
     volumes:
-      - ./backend:/home/backend
+      - ../backend:/home/backend
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
       - NODE_ENV=production
-      - URL_DB_CONNECTION=${URL_DB_CONNECTION} #mongodb://host.docker.internal/bookstore-production
+      - URL_DB_CONNECTION=mongodb://10.128.0.14/bookstore-production #mongodb://host.docker.internal/bookstore-production
     ports:
       - "5000:5000"
     restart: always
